# dummy-web-app

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Makefile  README.md  build.sh  deploy-remote.sh  docker-compose.prod.yml  docker-compose.yml  flow.excalidraw  install-service.sh  main.go  service.sh
.github/workflows/: build-and-release.yml  build.yml
src/: lib.rs  main.rs
systemd/: fastfetch-server.service
