[package]
name = "ip-fetcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ip-fetcher"
path = "src/main.rs"

[lib]
name = "ip_fetcher"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"